uwsgi config file

--- a/ids.ini
+++ b/ids.ini
@@ -1,11 +1,21 @@
 [uwsgi]
 module = wsgi:app
-
+strict = true
 master = true
-processes = 4
+enable-threads = true
+vacuum = true                        ; Delete sockets during shutdown
+single-interpreter = true
+die-on-term = true                   ; Shutdown when receiving SIGTERM (default is respawn)
 
 socket = /home/admin/ids/ids1.sock
 chmod-socket = 666
-vacuum = true
 
-die-on-term = true
+;disable-logging = true               ; Disable built-in logging
+;log-4xx = true                       ; but log 4xx's anyway
+;log-5xx = true                       ; and 5xx's
+
+req-logger = file:/tmp/reqlog
+logger = file:/tmp/errlog
+
+max-requests = 1000                  ; Restart workers after this many requests
+max-worker-lifetime = 3600           ; Restart workers after this many seconds
